@@ -24,6 +24,7 @@ better API.
 * Refactored the word list generating code.
 * Added a composite language feature.
 * Merged reorg branch to trunk.
+* Updated documentation.
 
 2007.09.15
 
